2009-10-10  Alexander Täschner  <taschna@users.sourceforge.net>

	* src/tabulate.c:  Fix tabular output of log scale data.
	Bug #2849166

2009-10-09  Thomas Sefzick <thse@users.sourceforge.net>

	* term/latex.trm:  Add an option for rotated text in the old latex
	terminal.  'set term latex rotate' enables it and turns off the 
	previous 'stacked' y-label mechanism.

2009-10-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_image_or_update_axes) demo/imageNaN.dem: 
	NaN/Inf values in the input are processed differently depending on
	whether they are read directly from the input file or generated by an 
	input expression.  Both cases should be treated equivalently for the
	purpose of IMAGE rendering.  
	NB: Fixes 2D case but not 3D case, as shown by revised imageNaN demo.
	Bug #2875069

2009-10-08  Ethan A Merritt  <merritt@u.washington.edu>

	* FAQ.pdf Makefile.am: FAQ.pdf replaces outdated FAQ

	* src/graph3d.c (do_3dplot): Explicit 'set xyplane at <z-value>' should
	be honored even if the x and y tics are turned off.
	Bugfix

	* src/graph3d.c (plot3drequest): Fixes spurious error from old tics,
	e.g.  "set ytics ("Bug" 0); unset ytics; set ytics; splot x*y"

2009-10-06  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/term.c (term_start_multiplot): Accept an explicit font for
	the multiplot title.

2009-10-06  Ethan A Merritt  <merritt@u.washington.edu>

	* term/gd.trm: Silence a compiler warning if gdUseFontConfig() is
	defined to be 0.

	* demo/html/webify.pl demo/html/webify_svg.pl demo/html/webify_canvas.pl
	If GNUPLOT_LIB is not defined, set it to ..
	Bug #2868958

2009-10-06  Tatsuro Matsuoka <tmacchant3@yahoo.co.jp>

	* config/makeile.mgw:  Override the -mwindows compilation flag 
	provided by wx-config.

2009-09-17  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm (CANVAS_graphics): Be wary of uninitialized
	global variables when setting up the mouse event handler.
